# Assistant

./: .env.example  .gitignore  Cargo.toml  README.md
src/: constants.rs  data.rs  db.rs  helper.rs  main.rs
src/commands/: admin.rs  adminping.rs  btp.rs  manage.rs  miq_status.rs  mod.rs  modping.rs  purge.rs  runjs.rs  shard.rs  status.rs  test.rs  translate.rs
src/commands/roles/: mod.rs  not_reactable.rs
src/commands/tags/: en.rs  mod.rs  modify.rs
src/events/: member_removal.rs  message.rs  mod.rs  presence.rs  reaction_add.rs  ready.rs
src/structs/: tags.rs
