[package]
name = "assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", version = "0.12.0", features = ["cache"] }
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next", version = "0.6.1", features = ["cache"] }
once_cell = "1.19.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
regex = "1.10.3"
chrono = "0.4.34"
rusty_v8 = "0.32.1"
reqwest = { version = "0.11.24", features = ["json"] }
