[package]
name = "assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
once_cell = "1.19.0"
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next", version = "0.6.1", features = ["cache"] }
regex = "1.10.6"
reqwest = { version = "0.12.18", features = ["json"] }
rusty_v8 = { version = "0.32.1", optional = true }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", version = "0.12.4", features = ["cache"] }
sqlx = { version = "0.8.6", features = ["postgres", "chrono", "runtime-tokio", "tls-rustls", "macros", "json"], optional = true }
tokio = { version = "1.45.1", features = ["macros", "rt", "rt-multi-thread"] }

[features]
default = ["admin", "runjs"]
admin = ["db"]
db = ["dep:sqlx"]
runjs = ["dep:rusty_v8"]