[package]
name = "assistant"
version = "0.1.0"
edition = "2024"

[features]
default = ["admin", "runjs"]
admin = ["db"]
db = ["dep:sqlx"]
runjs = ["dep:rusty_v8"]

[dependencies]
chrono = "0.4"
dotenvy = "0.15"
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next", version = "0.6.1", features = ["cache"] }
regex = "1"
reqwest = { version = "0.13", features = ["json", "rustls"] }
rusty_v8 = { version = "0.32", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", version = "0.12.5", features = ["cache", "rustls_backend"] }
sqlx = { version = "0.8", features = ["postgres", "chrono", "runtime-tokio", "tls-rustls", "macros", "json"], optional = true }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
